testdata/zkc/invalid/while_invalid_02.zkc
;;error:4:15-16:braces required
function f(u8 x) -> (u8 r) {
  r = 0
  while x + x * x == 0 {
    r = 1
  }
  return
}
